--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <img src="images/nav/navig-main.png" class="naviBanners">
   	<a href="/blog" class="navi"><img src="images/nav/flow.png">blog</a>
   	<a href="/bio" class="navi"><img src="images/nav/flow.png">bio</a>
-		<a href="/projects/uc" class="navi"><img src="images/nav/flow.png">chat</a>
+		<a href="/chat" class="navi"><img src="images/nav/flow.png">chat</a>
 		  	<a href="/projects/uc" class="navi"><img src="images/nav/flow.png">reference</a>
 
   <img src="images/nav/navi-rite.png" class="naviBanners" style="margin-top:20px;">
