--- a/randomlove/index.html
+++ b/randomlove/index.html
@@ -67,7 +67,7 @@
 
 
 		<div id="ccontent">
-            <img class="auditorium" src="../images/randomlove/books/2.jpg" style="width: 160px;"/>
+            <img class="auditorium" src="../images/randomlove/books/3.jpg" style="width: 160px;"/>
 						<br><br><h3>Books-----------------------</h3>            <ol class="playlist_info">
 							<li>books i adore <</li><br>
             </ol>
@@ -78,7 +78,7 @@
 
 
 				<div id="ccontent">
-								<img class="auditorium" src="../images/randomlove/musicals/w.jpg" style="width: 160px;"/>
+								<img class="auditorium" src="../images/randomlove/musicals/4.jpg" style="width: 160px;"/>
 								<br><br><h3>Musicals----------------</h3>            <ol class="playlist_info">
 									<li>musicals i adore <</li><br>
 								</ol>
@@ -87,6 +87,16 @@
 
 						</div>
 
+
+						<div id="ccontent">
+										<img class="auditorium" src="../images/randomlove/random/1.jpg" style="width: 160px;"/>
+										<br><br><h3>Random-------------------</h3>            <ol class="playlist_info">
+											<li>randoms i adore <</li><br>
+										</ol>
+										<a href="/randomlove/uc" class="label3">CLICK TO HEAR MY RAMBLINGS</a>
+
+
+								</div>
 
 						<div id="ccontent">
 										<img class="auditorium" src="../images/randomlove/shoppinglist/1.jpg" style="width: 160px;"/>
@@ -98,8 +108,15 @@
 
 								</div>
 
+				<div id="ccontent">
+								<img class="auditorium" src="../images/randomlove/languages/1.jpg" style="width: 160px;"/>
+								<br><br><h3>Languages------------</h3>            <ol class="playlist_info">
+									<li>stuff about languuuages <</li><br>
+								</ol>
+								<a href="/randomlove/uc" class="label3">CLICK TO HEAR MY RAMBLINGS</a>
 
 
+						</div>
 
 
 
