--- a/index.html
+++ b/index.html
@@ -29,23 +29,23 @@
   	<a href="/blog" class="navi"><img src="images/nav/flow.png">blog</a>
   	<a href="/bio" class="navi"><img src="images/nav/flow.png">bio</a>
 		<a href="/chat" class="navi"><img src="images/nav/flow.png">chat</a>
-		  	<a href="/projects/uc" class="navi"><img src="images/nav/flow.png">reference</a>
+		  	<a href="/projects/uc" class="navi"><img src="images/nav/flow.png"><strike>reference</strike></a>
 
   <img src="images/nav/navi-rite.png" class="naviBanners" style="margin-top:20px;">
     <a href="/projects" class="navi"><img src="images/nav/flow.png">projects</a>
     <a href="/randomlove" class="navi"><img src="images/nav/flow.png">random love</a>
-    <a href="/projects/uc" class="navi"><img src="images/nav/flow.png">ani-me</a>
-    <a href="/projects/uc" class="navi"><img src="images/nav/flow.png">code</a>
-    <a href="/projects/uc" class="navi"><img src="images/nav/flow.png">video-games</a>
+    <a href="/projects/uc" class="navi"><img src="images/nav/flow.png"><strike>ani-me</strike></a>
+    <a href="/projects/uc" class="navi"><img src="images/nav/flow.png"><strike>code</strike></a>
+    <a href="/projects/uc" class="navi"><img src="images/nav/flow.png"><strike>video-games</strike></a>
 
 
   <img src="images/nav/navi-vmfx.png" class="naviBanners" style="margin-top:20px;">
-    <a href="/projects/uc" class="navi"><img src="images/nav/flow.png">video</a>
-    <a href="/projects/uc" class="navi"><img src="images/nav/flow.png">art</a>
+    <a href="/projects/uc" class="navi"><img src="images/nav/flow.png"><strike>video</strike></a>
+    <a href="/projects/uc" class="navi"><img src="images/nav/flow.png"><strike>art</strike></a>
 
   <img src="images/nav/navig-othr.png" class="naviBanners" style="margin-top:20px;">
     <a href="/music" class="navi"><img src="images/nav/flow.png">music</a>
-  	<a href="/projects/uc" class="navi"><img src="images/nav/flow.png">videos</a>
+  	<a href="/projects/uc" class="navi"><img src="images/nav/flow.png"><strike>videos</strike></a>
 
 	<div style="margin:30px 0;">
 	<a href="new.html"><img src="images/home/test.gif" class="img-center" style="image-rendering: pixelated;image-rendering: -moz-crisp-edges;image-rendering: crisp-edges;"></a></div>
@@ -65,6 +65,12 @@
       <img class="logo" style="width:500px;" src="images/home/tumble.png" />
 			<img class="logo" src="images/home/ddd.gif" />
       <div class="row imgPixel">
+
+        <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif" class="img-center"></div>
+        <div class="col-sm-9 col-md-offset-1">
+          <h3 style="margin-bottom:10px;">2/26/20 </h3>
+          <p style="margin-bottom:30px;"><strike>strike! you're out. change sides</strike></p>
+        </div>
 
         <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
