--- a/randomlove/characters/index.html
+++ b/randomlove/characters/index.html
@@ -1,32 +1,94 @@
-
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<head>
+	<meta charset="UTF-8">
     <title>「ｒｅ：Ｌｉｖｅ」</title>
+    <link href="core.css" rel="stylesheet" type="text/css" media="all">
     <link rel="icon" type="image/png" href="../../images/home/pupilpng.png" sizes="1000x1000" />
-    <link href="entry.css" rel="stylesheet" type="text/css" media="all">
-    <style>
-    body {
-      background: url(uhhh.png) top left repeat;
-      background-size: 76.4%;
+
+    <script language="JavaScript" type="text/javascript">
+    /*<![CDATA[*/
+    var ImgAry=['../img/monitors-lg.gif','../img/monitors-lg-back.gif','../img/monitors-lg-email.gif', '../img/monitors-lg-guest.gif'];
+    var MapAry=[];
+
+    for (var zxc0=0; zxc0<ImgAry.length; zxc0++)
+    {
+        MapAry[zxc0] = new Image();
+        MapAry[zxc0].src = ImgAry[zxc0];
     }
-    </style>
-  </head>
-  <body>
-  <div id="page">
-    <div id="content_container">
-      <div id="content">
-        <div class="main">
-                <br><h2>Characters</h2><br><br>
-                <h1>Beginnings</h1><br>
-                <p>pretty uwu</p>
-                <br><h1>Pics</h1><br>
-                <br><p><img src="../../images/randomlove/characters/aa.jpg"></p><br>
+
+    function Swap(id, nu)
+    {
+        document.getElementById(id).src = MapAry[nu].src;
+    }
+    /*]]>*/
+    </script>
+</head>
+
+<body>
+  <div><p></p><p></p><p></p></div>
+
+    <div id="wrap">
+
+        <div id="content_head">
+            <h1>Characters</h1>
         </div>
-      </div>
+
+
+        <div id="content">
+            <p>
+						here's a list of 'characters' i loooooooooooove or just want to talk abouut~ hehe
+            </p>
+        </div>
+				<div id="content2">
+								<div class="label2">
+										<p><a href="https://relivesight.com/">Return to Home Page</a></p>
+								</div>
+						</div>
+
+
+
+		<div id="ccontent">
+            <img class="auditorium" src="../../images/randomlove/characters/2b.jpg" style="width: 160px;"/>
+						<br><br><h3>YoRHa No. 2 Type: B</h3>            <ol class="playlist_info">
+							<li>2b is my waifu, the literal greatest character i have ever seen ever ever ever ever ever ever experienced. <</li><br>
+            </ol>
+
+
+
+        </div>
+
+
+
+		<div id="ccontent">
+            <img class="auditorium" src="../../images/randomlove/characters/kkk.jpg" style="width: 160px;"/>
+						<br><br><h3>Ken Kaneki</h3>            <ol class="playlist_info">
+							<li>Manga bro, ima add an art dump for him <</li><br>
+            </ol>
+
+        </div>
+
+
+				<div id="ccontent">
+								<img class="auditorium" src="../../images/randomlove/characters/ns.jpg" style="width: 160px;"/>
+								<br><br><h3>Nagisa Shiota</h3>            <ol class="playlist_info">
+									<li>ill fill out these later okay<</li><br>
+								</ol>
+
+
+						</div>
+
+
+
+
+
+
+
+        <div id="site_entry">
+            <p>[ <a href="#">Back to Top</a> ]</p>
+        </div>
     </div>
-  </div>
-  </body>
+</body>
+
 </html>
