--- a/randomlove/characters/index.html
+++ b/randomlove/characters/index.html
@@ -52,7 +52,7 @@
 		<div id="ccontent">
             <img class="auditorium" src="../../images/randomlove/characters/2b.jpg" style="width: 160px;"/>
 						<br><br><h3>YoRHa No. 2 Type: B</h3>            <ol class="playlist_info">
-							<li>2b is my waifu, my ~~first~~ love and the only one for me. NieR: Automata is my favorite game and this
+							<li>2b is my waifu. NieR: Automata is my favorite game and this
 								character has literally everything i could ever want. Though my interpretation of her is broadened to the
 							 hundreds of comics i've read, her canonical character sets the same basic framework. 2B is a blade of quiet determination. As a combat android, she does not encourage idle chatter on frivolous subjects and is generally reticent towards others. She also has high respect for the chain of command and rarely questions her orders, unlike her partner. However, 2B occasionally expresses a notably sardonic wit in the face of certain situations and can even be hot-headed at times.
 
