--- a/chat/index.html
+++ b/chat/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="icon" type="image/png" href="../images/pupilpng.png" sizes="1000x1000" />
+  <link rel="icon" type="image/png" href="../images/home/pupilpng.png" sizes="1000x1000" />
   <script type='text/javascript' src='https://cdn.scaledrone.com/scaledrone.min.js'></script>
   <!--<script type='text/javascript' src='http://0.0.0.0:8080/scaledrone.js'></script>-->
   <meta charset="utf-8">
