--- a/mobile/index.html
+++ b/mobile/index.html
@@ -2,8 +2,8 @@
 <html lang="en"><!-- InstanceBegin template="/Templates/omni.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<link rel="stylesheet" href="../css/stylesheet.css">
-<!-- InstanceBeginEditable name="doctitle" -->
+<link rel="stylesheet" href="../css/mobile.css">
+<!-- InstanceBeginEditable name="doctitle"  style="width: 160px;"-->
 <title>「ｒｅ：Ｌｉｖｅ」</title>
 <!-- InstanceEndEditable -->
 <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,6 +15,10 @@
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
 </head>
+<script language="javascript">
+          if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
+            location.href = '/mobile';}
+          </script>
 
 <body>
 
@@ -22,26 +26,26 @@
 <div class="col-sm-12 col-md-3 contentLeft">
 	<h1 style="margin-bottom:30px;"><img src="../images/home/title0000.png" alt="RE:LIVE" class="img-center img-title"></h1>
   <img src="../images/nav/navig-main.png" class="naviBanners">
-  	<a href="../index.html" class="navi"><img src="../images/nav/flow.png">blog</a>
-  	<a href="new.html" class="navi"><img src="../images/nav/flow.png">bio</a>
-		<a href="kao.html" class="navi"><img src="../images/nav/flow.png">chat</a>
-		  	<a href="videos.html" class="navi"><img src="../images/nav/flow.png">reference</a>
+  	<a href="/blog" class="navi"><img src="../images/nav/flow.png">blog</a>
+  	<a href="/bio" class="navi"><img src="../images/nav/flow.png">bio</a>
+		<a href="/chat" class="navi"><img src="../images/nav/flow.png">chat</a>
+		  	<a href="/projects/uc" class="navi"><img src="../images/nav/flow.png"><strike>reference</strike></a>
 
   <img src="../images/nav/navi-rite.png" class="naviBanners" style="margin-top:20px;">
-    <a href="anime.html" class="navi"><img src="../images/nav/flow.png">projects</a>
-    <a href="blinkies.html" class="navi"><img src="../images/nav/flow.png">ani-notes</a>
-    <a href="links.html" class="navi"><img src="../images/nav/flow.png">code</a>
-		<a href="buttons.html" class="navi"><img src="../images/nav/flow.png">build-guides</a>
-    <a href="videogames.html" class="navi"><img src="../images/nav/flow.png">video-games</a>
+    <a href="/projects" class="navi"><img src="../images/nav/flow.png">projects</a>
+    <a href="/randomlove" class="navi"><img src="../images/nav/flow.png">random love</a>
+    <a href="/projects/uc" class="navi"><img src="../images/nav/flow.png"><strike>ani-me</strike></a>
+    <a href="/projects/uc" class="navi"><img src="../images/nav/flow.png"><strike>code</strike></a>
+    <a href="/projects/uc" class="navi"><img src="../images/nav/flow.png"><strike>video-games</strike></a>
 
 
   <img src="../images/nav/navi-vmfx.png" class="naviBanners" style="margin-top:20px;">
-    <a href="jotaro.html" class="navi"><img src="../images/nav/flow.png">video</a>
-    <a href="art.html" class="navi"><img src="../images/nav/flow.png">art</a>
+    <a href="/projects/uc" class="navi"><img src="../images/nav/flow.png"><strike>video</strike></a>
+    <a href="/projects/uc" class="navi"><img src="../images/nav/flow.png"><strike>art</strike></a>
 
   <img src="../images/nav/navig-othr.png" class="naviBanners" style="margin-top:20px;">
-    <a href="music.html" class="navi"><img src="../images/nav/flow.png">music</a>
-  	<a href="videos.html" class="navi"><img src="../images/nav/flow.png">videos</a>
+    <a href="/music" class="navi"><img src="../images/nav/flow.png">music</a>
+  	<a href="/projects/uc" class="navi"><img src="../images/nav/flow.png"><strike>videos</strike></a>
 
 	<div style="margin:30px 0;">
 	<a href="new.html"><img src="../images/home/test.gif" class="img-center" style="image-rendering: pixelated;image-rendering: -moz-crisp-edges;image-rendering: crisp-edges;"></a></div>
@@ -57,9 +61,24 @@
       <p>no matter where you go, everyone's connected. welcome to my connection</p>
     </div>
     <div class="col-sm-12">
-      <h2>the mobile site isnt ready at all... it will be awhile, sorry</h2>
+      <!--<h2>it all comes tumbling down, tumbling down, tumbling down . . .</h2>-->
+      <img class="logo" style="width:300px;" src="../images/home/tumble.png" />
+			<img class="logo" style="width:300px;" src="../images/home/ddd.gif" />
       <div class="row imgPixel">
-				<div class="col-sm-3 col-md-2"><img src="../images/home/tell.gif" class="img-center"></div>
+
+        <div class="col-sm-3 col-md-2"><img src="../images/home/tell.gif" style="width:90px;"style="width:90px;" class="img-center"></div>
+        <div class="col-sm-9 col-md-offset-1">
+          <h3 style="margin-bottom:10px;">2/26/20 </h3>
+          <p style="margin-bottom:30px;"><strike>strike! you're out. change sides</strike></p>
+        </div>
+
+        <div class="col-sm-3 col-md-2"><img src="../images/home/uu2.gif"" class="img-center"></div>
+        <div class="col-sm-9 col-md-offset-1">
+          <h3 style="margin-bottom:10px;">1/28/20 </h3>
+          <p style="margin-bottom:30px;">pr[]ductivity skyr[]ckets with l[]gs</p>
+        </div>
+
+				<div class="col-sm-3 col-md-2"><img src="../images/home/tell.gif" style="width:90px;"class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">1/17/20 <img src="../images/nav/flow.png" class="new"></h3>
           <p style="margin-bottom:30px;">pump up the jam. new page.</p>
@@ -68,10 +87,10 @@
         <div class="col-sm-3 col-md-2"><img src="../images/home/uu2.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">1/8/20 </h3>
-          <p style="margin-bottom:30px;">physical reality is nothing but an illusion</p>
+          <p style="margin-bottom:30px;">physical reality is nothing but a sneaky ninja</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="../images/home/tell.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="../images/home/tell.gif" style="width:90px;" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">12/28/19</h3>
           <p style="margin-bottom:30px;">maybe engines will behave today.</p>
@@ -83,7 +102,7 @@
           <p style="margin-bottom:30px;">new pages will be done soon... more to come?</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="../images/home/tell.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="../images/home/tell.gif" style="width:90px;" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">10/25/19</h3>
           <p style="margin-bottom:30px;">i stan tron legacy. now you know, i am invalid.</p>
@@ -95,7 +114,7 @@
           <p style="margin-bottom:30px;">m*necraft server! also @f*ntface sucks.</p>
         </div>
 
-      <div class="col-sm-3 col-md-2"><img src="../images/home/tell.gif"" class="img-center"></div>
+      <div class="col-sm-3 col-md-2"><img src="../images/home/tell.gif" style="width:90px;" class="img-center"></div>
       <div class="col-sm-9 col-md-offset-1">
         <h3 style="margin-bottom:10px;">6/30/19</h3>
         <p style="margin-bottom:30px;">hey look <a href="https://artbreeder.com/browse" target="_blank">...art...</a> fancy (∿°○°)∿♡</p>
@@ -108,7 +127,7 @@
             <p style="margin-bottom:30px;">everything that lives is designed to end. we are perpetually trapped in a never-ending spiral of life and death. is this a curse? or some kind of punishment? i often think about the god who blessed us with this cryptic puzzle...and wonder if we'll ever get the chance to kill him.</p>
           </div>
 
-        <div class="col-sm-3 col-md-2"><img src="../images/home/tell.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="../images/home/tell.gif" style="width:90px;" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">3/8/19</h3>
           <p style="margin-bottom:30px;">since this website will inevitably be updated in january of 2020 this entry isn't real.</p>
@@ -117,10 +136,10 @@
         <div class="col-sm-3 col-md-2"><img src="../images/home/uu2.gif"" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">11/18/18</h3>
-          <p style="margin-bottom:30px;">welcome to ren's riot of a web space—my official webring to a(rt)nime.</p>
+          <p style="margin-bottom:30px;">welcøme to ren's riøt of a web space—my øfficial webring tø a(rt)nime.</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="../images/home/tell.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="../images/home/tell.gif" style="width:90px;" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">10/27/18</h3>
           <p style="margin-bottom:30px;">livin life, shakin strife, wont know, wont go,</p>
