--- a/mobile/index2.html
+++ b/mobile/index2.html
@@ -15,7 +15,10 @@
 <!-- InstanceBeginEditable name="head" -->
 <!-- InstanceEndEditable -->
 </head>
-
+<script language="javascript">
+          if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
+            location.href = '/mobile';}
+          </script>
 
 <body>
 
