--- a/randomlove/characters/index.html
+++ b/randomlove/characters/index.html
@@ -38,7 +38,7 @@
 
         <div id="content">
             <p>
-						here's a list of 'characters' i loooooooooooove that i rate on a scale ~ hehe
+						here's a list of 'characters' i love that i rate on a scale of my favoriteness ~ hehe
             </p>
         </div>
 				<div id="content2">
