--- a/randomlove/characters/index.html
+++ b/randomlove/characters/index.html
@@ -32,7 +32,7 @@
     <div id="wrap">
 
         <div id="content_head">
-            <h1>Characters</h1>
+            <h1>My Favorite Characters</h1>
         </div>
 
 
