--- a/randomlove/characters/index.html
+++ b/randomlove/characters/index.html
@@ -86,7 +86,7 @@
 								<img class="auditorium" src="../../images/randomlove/characters/ns.jpg" style="width: 160px;"/>
 								<br><br><h3>Nagisa Shiota</h3>            <ol class="playlist_info">
 									<li>Origin: Assassination Classroom</li>
-									<li>Gender: Male Human</li>
+									<li>Gender: Male</li>
 									<li>Rating: A</li><br>
 								</ol>
 
@@ -162,7 +162,7 @@
 							<br><br><h3>Ada Lovelace</h3>            <ol class="playlist_info">
 								<li>Origin: Real Life</li>
 								<li>Gender: Female</li>
-								<li>Rating: B</li><br>
+								<li>Rating: B-</li><br>
 							</ol>
 
 
