--- a/randomlove/characters/index.html
+++ b/randomlove/characters/index.html
@@ -40,6 +40,7 @@
             <p>
 						here's a list of 'characters' i love that i rate on a scale of my favoriteness ~ hehe
             </p>
+						<p>an incomplete list</p>
         </div>
 				<div id="content2">
 								<div class="label2">
