--- a/randomlove/index.html
+++ b/randomlove/index.html
@@ -71,7 +71,7 @@
 						<br><br><h3>Books-----------------------</h3>            <ol class="playlist_info">
 							<li>books i adore <</li><br>
             </ol>
-						<a href="/randomlove/uc" class="label3">CLICK TO HEAR MY RAMBLINGS</a>
+						<a href="/randomlove/books" class="label3">CLICK TO HEAR MY RAMBLINGS</a>
 
 
         </div>
@@ -82,7 +82,7 @@
 								<br><br><h3>Musicals----------------</h3>            <ol class="playlist_info">
 									<li>musicals i adore <</li><br>
 								</ol>
-								<a href="/randomlove/uc" class="label3">CLICK TO HEAR MY RAMBLINGS</a>
+								<a href="/randomlove/musicals" class="label3">CLICK TO HEAR MY RAMBLINGS</a>
 
 
 						</div>
