--- a/randomlove/index.html
+++ b/randomlove/index.html
@@ -93,7 +93,7 @@
 										<br><br><h3>Random-------------------</h3>            <ol class="playlist_info">
 											<li>randoms i adore <</li><br>
 										</ol>
-										<a href="/randomlove/uc" class="label3">CLICK TO HEAR MY RAMBLINGS</a>
+										<a href="/randomlove/random" class="label3">CLICK TO HEAR MY RAMBLINGS</a>
 
 
 								</div>
