--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <img src="images/nav/navi-vmfx.png" class="naviBanners" style="margin-top:20px;">
     <a href="/projects/uc" class="navi"><img src="images/nav/flow.png"><strike>video</strike></a>
-    <a href="/projects/uc" class="navi"><img src="images/nav/flow.png"><strike>art</strike></a>
+    <a href="/projects/art" class="navi"><img src="images/nav/flow.png"><strike>art</strike></a>
 
   <img src="images/nav/navig-othr.png" class="naviBanners" style="margin-top:20px;">
     <a href="/music" class="navi"><img src="images/nav/flow.png">music</a>
