--- a/randomlove/index.html
+++ b/randomlove/index.html
@@ -103,7 +103,7 @@
 										<br><br><h3>Shopping List-------</h3>            <ol class="playlist_info">
 											<li>things i need to buy <</li><br>
 										</ol>
-										<a href="/randomlove/uc" class="label3">CLICK TO HEAR MY RAMBLINGS</a>
+										<a href="/randomlove/shopping" class="label3">CLICK TO HEAR MY RAMBLINGS</a>
 
 
 								</div>
@@ -113,7 +113,7 @@
 								<br><br><h3>Languages------------</h3>            <ol class="playlist_info">
 									<li>stuff about languuuages <</li><br>
 								</ol>
-								<a href="/randomlove/uc" class="label3">CLICK TO HEAR MY RAMBLINGS</a>
+								<a href="/randomlove/languages" class="label3">CLICK TO HEAR MY RAMBLINGS</a>
 
 
 						</div>
