--- a/art/index.html
+++ b/art/index.html
@@ -38,12 +38,11 @@
 
         <div id="content">
             <p>
-                Welcome to the place i talk about things. I like lots and lots of things and the ones that dont fit into the other pages
-								are for [here].
+                Welcome to the place where i share my art endeavors, or other art i enjoy
             </p>
 
             <p>
-                i love to love, here are the things for loving
+note: i cannot draw, so most all i do is digital
             </p>
         </div>
 				<div id="content2">
@@ -57,11 +56,11 @@
 
 
 				<div id="ccontent">
-								<img class="auditorium" src="../images/randomlove/languages/a.jpg" style="width: 160px;"/>
-								<br><br><h3>Lanart---------</h3>            <ol class="playlist_info">
-									<li>stuff about languuuages <</li><br>
+								<img class="auditorium" src="../images/art/graphic/1.jpg" style="width: 160px;"/>
+								<br><br><h3>Graphic Design---</h3>            <ol class="playlist_info">
+									<li>stuff i do on computer for fun~! <</li><br>
 								</ol>
-								<a href="/randomlove/uc" class="label3">CLICK TO HEAR MY RAMBLINGS</a>
+								<a href="/art/graphic" class="label3">CLICK TO SEE MY ATTEMPTS</a>
 
 
 						</div>
