--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 
   <img src="images/nav/navi-vmfx.png" class="naviBanners" style="margin-top:20px;">
     <a href="/projects/uc" class="navi"><img src="images/nav/flow.png"><strike>video</strike></a>
-    <a href="/projects/art" class="navi"><img src="images/nav/flow.png"><strike>art</strike></a>
+    <a href="/art" class="navi"><img src="images/nav/flow.png">art</a>
 
   <img src="images/nav/navig-othr.png" class="naviBanners" style="margin-top:20px;">
     <a href="/music" class="navi"><img src="images/nav/flow.png">music</a>
-  	<a href="/projects/uc" class="navi"><img src="images/nav/flow.png"><strike>videos</strike></a>
-
+  	<a href="/projects/uc" class="navi"><img src="images/nav/flow.png"><strike>prod</strike></a>
+    <a href="/concept" class="navi"><img src="images/nav/flow.png">concept</a>
 	<div style="margin:30px 0;">
 	<a href="new.html"><img src="images/home/test.gif" class="img-center" style="image-rendering: pixelated;image-rendering: -moz-crisp-edges;image-rendering: crisp-edges;"></a></div>
 </div>
