--- a/index.html
+++ b/index.html
@@ -66,13 +66,20 @@
 			<img class="logo" src="images/home/ddd.gif" />
       <div class="row imgPixel">
 
+        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif" class="img-center"></div>
+        <div class="col-sm-9 col-md-offset-1">
+          <h3 style="margin-bottom:10px;">3/7/20 </h3>
+          <p style="margin-bottom:30px;">today's sum ls 30</p>
+        </div>
+
+
         <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">2/26/20 </h3>
           <p style="margin-bottom:30px;"><strike>strike! you're out. change sides</strike></p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">1/28/20 </h3>
           <p style="margin-bottom:30px;">pr[]ductivity skyr[]ckets with l[]gs</p>
@@ -84,68 +91,68 @@
           <p style="margin-bottom:30px;">pump up the jam. new page.</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">1/8/20 </h3>
           <p style="margin-bottom:30px;">physical reality is nothing but a sneaky ninja</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">12/28/19</h3>
           <p style="margin-bottom:30px;">maybe engines will behave today.</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">11/10/19</h3>
           <p style="margin-bottom:30px;">new pages will be done soon... more to come?</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">10/25/19</h3>
           <p style="margin-bottom:30px;">i stan tron legacy. now you know, i am invalid.</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">7/15/19</h3>
           <p style="margin-bottom:30px;">m*necraft server! also @f*ntface sucks.</p>
         </div>
 
-      <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif"" class="img-center"></div>
+      <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif" class="img-center"></div>
       <div class="col-sm-9 col-md-offset-1">
         <h3 style="margin-bottom:10px;">6/30/19</h3>
         <p style="margin-bottom:30px;">hey look <a href="https://artbreeder.com/browse" target="_blank">...art...</a> fancy (∿°○°)∿♡</p>
       </div>
 
         <div class="row imgPixel">
-          <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
+          <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif" class="img-center"></div>
           <div class="col-sm-9 col-md-offset-1">
             <h3 style="margin-bottom:10px;">6/15/19</h3>
             <p style="margin-bottom:30px;">everything that lives is designed to end. we are perpetually trapped in a never-ending spiral of life and death. is this a curse? or some kind of punishment? i often think about the god who blessed us with this cryptic puzzle...and wonder if we'll ever get the chance to kill him.</p>
           </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">3/8/19</h3>
           <p style="margin-bottom:30px;">since this website will inevitably be updated in january of 2020 this entry isn't real.</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">11/18/18</h3>
           <p style="margin-bottom:30px;">welcøme to ren's riøt of a web space—my øfficial webring tø a(rt)nime.</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="images/home/tell.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">10/27/18</h3>
           <p style="margin-bottom:30px;">livin life, shakin strife, wont know, wont go,</p>
         </div>
 
-        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif"" class="img-center"></div>
+        <div class="col-sm-3 col-md-2"><img src="images/home/uu2.gif" class="img-center"></div>
         <div class="col-sm-9 col-md-offset-1">
           <h3 style="margin-bottom:10px;">09/10/18</h3>
           <p style="margin-bottom:30px;">log: a new beginning</p>
