--- a/randomlove/index.html
+++ b/randomlove/index.html
@@ -59,7 +59,7 @@
 						<br><br><h3>Characters----------</h3>            <ol class="playlist_info">
 							<li>characters i adore <</li><br>
             </ol>
-						<a href="/randomlove/characters" class="label3">CLICK TO HEAR MY RAMBLINGS</a>
+						<a href="/randomlove/characters" class="label3">CLICK TO SEE MY OPINIONS</a>
 
 
         </div>
@@ -71,7 +71,7 @@
 						<br><br><h3>Books-----------------------</h3>            <ol class="playlist_info">
 							<li>books i adore <</li><br>
             </ol>
-						<a href="/randomlove/books" class="label3">CLICK TO HEAR MY RAMBLINGS</a>
+						<a href="/randomlove/books" class="label3">CLICK TO SEE MY OPINIONS</a>
 
 
         </div>
@@ -82,7 +82,7 @@
 								<br><br><h3>Musicals----------------</h3>            <ol class="playlist_info">
 									<li>musicals i adore <</li><br>
 								</ol>
-								<a href="/randomlove/musicals" class="label3">CLICK TO HEAR MY RAMBLINGS</a>
+								<a href="/randomlove/musicals" class="label3">CLICK TO SEE MY OPINIONS</a>
 
 
 						</div>
@@ -93,7 +93,7 @@
 										<br><br><h3>Random-------------------</h3>            <ol class="playlist_info">
 											<li>randoms i adore <</li><br>
 										</ol>
-										<a href="/randomlove/random" class="label3">CLICK TO HEAR MY RAMBLINGS</a>
+										<a href="/randomlove/random" class="label3">CLICK TO SEE MY OPINIONS</a>
 
 
 								</div>
@@ -103,7 +103,7 @@
 										<br><br><h3>Shopping List-------</h3>            <ol class="playlist_info">
 											<li>things i need to buy <</li><br>
 										</ol>
-										<a href="/randomlove/shopping" class="label3">CLICK TO HEAR MY RAMBLINGS</a>
+										<a href="/randomlove/shopping" class="label3">CLICK TO SEE MY OPINIONS</a>
 
 
 								</div>
@@ -113,7 +113,7 @@
 								<br><br><h3>Languages------------</h3>            <ol class="playlist_info">
 									<li>stuff about languuuages <</li><br>
 								</ol>
-								<a href="/randomlove/languages" class="label3">CLICK TO HEAR MY RAMBLINGS</a>
+								<a href="/randomlove/languages" class="label3">CLICK TO SEE MY OPINIONS</a>
 
 
 						</div>
