--- a/music/index.html
+++ b/music/index.html
@@ -566,7 +566,121 @@ div#all {
       </div>
 
 
-    
+
+      <div class="view view-first">
+        <img src="../images/albulm/ppl.jpeg">
+        <div class="mask">
+          <h2>The 1975 - Notes on a Conditional Form (2020)</h2>
+          <p>Favorite song: People</p>
+
+        </div>
+      </div>
+
+
+      <div class="view view-first">
+        <img src="../images/albulm/nny.jpg">
+        <div class="mask">
+          <h2>Half Alive - Now, Not Yet (2019)</h2>
+          <p>Favorite songs: Runaway, Arrow, Still Feel, Pure Gold</p>
+
+        </div>
+      </div>
+
+
+      <div class="view view-first">
+        <img src="../images/albulm/ww.jpg">
+        <div class="mask">
+          <h2>煮ル果実 - ヲズワルド (2020)</h2>
+          <p>Favorite song: ヲズワルド</p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/3.jpg">
+        <div class="mask">
+          <h2>Half Alive - 3 (2017)</h2>
+          <p>Favorite songs: The Fall, Tip Toes </p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/st.jpg">
+        <div class="mask">
+          <h2>Twenty One Pilots - Twenty Online Pilots (2009)</h2>
+          <p>Favorite songs: Implicit Demand for Proof, Fall Away, The Pantaloon, Air Catcher, Trapdoor, Isle of Flightless Birds</p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/dpr.jpg">
+        <div class="mask">
+          <h2>Dirt Poor Robins - The Raven Locks Act 3 (2017)</h2>
+          <p>Favorite songs: Great Vacation, Welcome To Lady Hell</p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/ggg.jpg">
+        <div class="mask">
+          <h2>Boards of Canada - Geogaddi (2002)</h2>
+          <p>Favorite songs: Beware the Friendly Stranger, Gyroscope, Julie and Candy, The Devil Is in the details </p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/lll.jpg">
+        <div class="mask">
+          <h2>The Hush Sound - Like Vines (2006)</h2>
+          <p>Favorite songs: We Intertwined, A Dark Congregation, Lions Roar, Don't Wake Me Up, Wine Red</p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/mmtu.jpg">
+        <div class="mask">
+          <h2>Mother Mother - Touch Up (2007)</h2>
+          <p>Favorite songs: Oh Ana, Love and Truth, Verbatim, and Tic Toc</p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/csm.jpg">
+        <div class="mask">
+          <h2>Cosmo Sheldrake - The Much Much How How and I (Deluxe Edition) (2019)</h2>
+          <p>Favorite songs: Linger Longer, Come Along</p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/idk.jpg">
+        <div class="mask">
+          <h2>I DONT KNOW HOW BUT THEY FOUND ME - 1981 Extended Play (2018)</h2>
+          <p>Favorite songs: Choke, Bleed Magic, Absinthe</p>
+
+        </div>
+      </div>
+
+      <div class="view view-first">
+        <img src="../images/albulm/upl.jpg">
+        <div class="mask">
+          <h2>Blue Kid - Upright, Love (2012)</h2>
+          <p>Favorite songs: Can You Keep Up, The Dismemberment Song, Black Sheep</p>
+
+        </div>
+      </div>
+
+
+
+
+
 
 
 
