--- a/randomlove/books/index.html
+++ b/randomlove/books/index.html
@@ -44,7 +44,7 @@
         </div>
 				<div id="content2">
 								<div class="label2">
-										<p><a href="https://relivesight.com/">Return to Home Page</a></p>
+										<p><a href="https://relivesight.com/randomlove/">Return Back A Page</a></p>
 								</div>
 						</div>
 
@@ -81,7 +81,7 @@
 										<br><br><h3>The Communist Manifesto</h3>            <ol class="playlist_info">
 											<li>Author: Karl Marx, Friedrich Engels</li>
 											<li>Release: 1848</li>
-											<li>Rating: 88/95</li><br>
+											<li>Rating: 83/95</li><br>
 										</ol>
 
 
