--- a/randomlove/characters/index.html
+++ b/randomlove/characters/index.html
@@ -43,8 +43,8 @@
 						<p>an incomplete list</p>
         </div>
 				<div id="content2">
-								<div class="label2">
-										<p><a href="https://relivesight.com/">Return to Home Page</a></p>
+								<<div class="label2">
+										<p><a href="https://relivesight.com/randomlove/">Return Back A Page</a></p>
 								</div>
 						</div>
 
@@ -122,17 +122,6 @@
 
 	</div>
 
-
-	<div id="ccontent">
-					<img class="auditorium" src="../../images/randomlove/characters/cn.jpg" style="width: 160px;"/>
-					<br><br><h3>Chell</h3>            <ol class="playlist_info">
-						<li>Origin: Portal</li>
-						<li>Gender: Female</li>
-						<li>Rating: D-</li><br>
-					</ol>
-
-
-			</div>
 
 			<div id="ccontent">
 							<img class="auditorium" src="../../images/randomlove/characters/gf.png" style="width: 160px;"/>
