--- a/randomlove/characters/index.html
+++ b/randomlove/characters/index.html
@@ -43,7 +43,7 @@
 						<p>an incomplete list</p>
         </div>
 				<div id="content2">
-								<<div class="label2">
+								<div class="label2">
 										<p><a href="https://relivesight.com/randomlove/">Return Back A Page</a></p>
 								</div>
 						</div>
